fix: :wrench: prevent special keys like shift and other special characters

--- a/src/App.css
+++ b/src/App.css
@@ -36,4 +36,16 @@
   text-transform: uppercase;
 }
 
+.correct{
+  background-color: lightgreen;
+}
+
+.close{
+  background-color: yellow;
+}
+
+.incorrect{
+  background-color: lightgrey;
+}
+
 
